.xmonad/xmonad.errors

xmonad.hs:60:66: error:
    • Variable not in scope: tiled :: Layout Window
    • Perhaps you meant ‘tile’ (imported from XMonad.Layout)
   |
60 |     ((m .|. shiftMask               , xK_f          ), setLayout tiled),
   |                                                                  ^^^^^
